--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,7 @@
 
 theme = "blowfish"
 baseURL = "https://louigi.tech/"
-defaultContentLanguage = "fr"
+defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
