--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -10,7 +10,6 @@ defaultContentLanguageInSubdir = false
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-paginate = 10
 summaryLength = 0
 
 buildDrafts = false
@@ -19,6 +18,11 @@ buildFuture = false
 enableEmoji = true
 
 # googleAnalytics = "G-XXXXXXXXX"
+
+[pagination]
+  disableAliases = false
+  pagerSize = 10
+  path = 'page'
 
 [imaging]
   anchor = 'Center'
